[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "htmxido"
version = "0.1.3"
authors = [
  { name="Zohaib Sibte Hassan", email="zohaibsh@gmail.com" },
]
description = "A Python library to generate HTMX/HTML"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: HTML"
]

[project.urls]
Homepage = "https://github.com/maxpert/htmxido"
Issues = "https://github.com/maxpert/htmxido/issues"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = [
  "/htmxido"
]
exclude = [
  "test_*"
]

[tool.hatch.build.targets.wheel]
packages = ["."]